# auto-apply

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
src/: cli.py  config.py  db.py  models.py
src/ai/: cover_letter.py  prompts.py  tailor.py
src/applicator/: __init__.py  base.py
src/applicator/browser/: ashby.py  engine.py  greenhouse.py  lever.py  vision_agent.py  workday.py
src/documents/: pdf_generator.py  resume_parser.py
src/scraper/: __init__.py  ashby.py  base.py  detector.py  generic.py  greenhouse.py  lever.py  workday.py
src/sheets/: reader.py  writer.py
